fixed some dark mode style and routing

--- a/app/static/styles/mystyle.css
+++ b/app/static/styles/mystyle.css
@@ -308,7 +308,7 @@ section.resume-section .resume-section-content {
 /*End of About*/
 
 /*Blog*/
-.articleBody div[style="background:#eeeeee;border:1px solid #cccccc;padding:5px 10px;"] {
+.articleBody div[style*="background:#eeeeee;"] {
     background-color: var(--text-area-color) !important;
 }
 .articleTitle a {
